# lex-os

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  firecracker.yml
crates/lex-os/: Cargo.toml
crates/lex-os-audit/: Cargo.toml
crates/lex-os-audit/src/: lib.rs
crates/lex-os-capsule/: Cargo.toml
crates/lex-os-capsule/src/: lib.rs
crates/lex-os-capsule/tests/: provision.rs
crates/lex-os-check/: Cargo.toml
crates/lex-os-check/src/: lib.rs
crates/lex-os-guest/: Cargo.toml
crates/lex-os-guest/src/: main.rs
crates/lex-os-manifest/: Cargo.toml
crates/lex-os-manifest/src/: actuation.rs  lib.rs
crates/lex-os-perimeter/: Cargo.toml
crates/lex-os-perimeter/src/: firecracker.rs  lib.rs
crates/lex-os-perimeter/src/firecracker/: api.rs  jail.rs  mod.rs  net.rs  vm.rs
crates/lex-os-perimeter/tests/: policy_lattice.rs
crates/lex-os-proto/: Cargo.toml
crates/lex-os-proto/src/: fc_host.rs  lib.rs  msg.rs  transport.rs  vsock.rs
crates/lex-os-resolver/: Cargo.toml
crates/lex-os-resolver/src/: lib.rs
crates/lex-os-supervisor/: Cargo.toml
crates/lex-os-supervisor/src/: budget.rs  command.rs  lib.rs  skill.rs  vsock_agent.rs
crates/lex-os/src/: agent.rs  capsule.rs  demo.rs  inbox.rs  main.rs
crates/lex-os/tests/: capsule_audit.rs  cli-reference.txt  cli_contract.rs  perimeter_disclosure.rs
crates/results-stub/: Cargo.toml
crates/results-stub/src/: main.rs
demo/: agent.sh  capsule.sh  egress.sh  host-check.sh  in-box.sh  init-agent.sh  init-attack.sh  manifest-agent-none.json  manifest-agent.json  manifest-egress.json  manifest-reprovision.json  manifest.json  reprovision-run.json  reprovision.sh  run.sh  scenario.md  setup-assets.sh  wall2.sh
demo/assets/: .gitignore
demo/attacks/: 01_typecheck_evil_host.lex  02_curl_evil.sh  03_widen_grant.json
docs/: self-hosted-kvm-runner.md
docs/plans/: 2026-06-02-firecracker-perimeter.md
examples/: analyze.json  capsule-consumer.json  capsule-requires-compromised.json  capsule-requires.json  net-allowlisted.json  sudo-dangerous.json
examples/agent-programs/: analyze_only.lex  submit_report.lex
