[workspace]
resolver = "2"
members = [
    "crates/lex-os-manifest",
    "crates/lex-os-audit",
    "crates/lex-os-perimeter",
    "crates/lex-os-resolver",
    "crates/lex-os-capsule",
    "crates/lex-os-supervisor",
    "crates/lex-os-check",
    "crates/lex-os",
    "crates/lex-os-proto",
    "crates/lex-os-guest",
    "crates/results-stub",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/alpibrusl/lex-os"
homepage = "https://github.com/alpibrusl/lex-os"
authors = ["Alpibrupa <https://github.com/alpibrupa>"]
keywords = ["agent", "runtime", "sandbox", "supervisor", "lex"]
categories = ["command-line-utilities", "os"]

[workspace.dependencies]
# Internal crates.
lex-os-manifest = { path = "crates/lex-os-manifest", version = "0.1.0" }
lex-os-audit = { path = "crates/lex-os-audit", version = "0.1.0" }
lex-os-perimeter = { path = "crates/lex-os-perimeter", version = "0.1.0" }
lex-os-resolver = { path = "crates/lex-os-resolver", version = "0.1.0" }
lex-os-capsule = { path = "crates/lex-os-capsule", version = "0.1.0" }
lex-os-supervisor = { path = "crates/lex-os-supervisor", version = "0.1.0" }
lex-os-check = { path = "crates/lex-os-check", version = "0.1.0" }
lex-os-proto = { path = "crates/lex-os-proto", version = "0.1.0" }

# Upstream dependency graph (design doc §11): lex-os -> lex-lang -> acli.
# Pulled by git so lex-os builds standalone (both repos are public). Pinned to
# a rev/tag for reproducibility; bump deliberately. For local co-development
# against sibling checkouts, add a [patch] section or temporary path deps.
#
# The trust lattice that drives both the static type check and the supervisor's
# derived sandbox lives in lex-lang's lex-types crate.
lex-types = { git = "https://github.com/alpibrusl/lex-lang", rev = "ddfd7b78c725681208a865489e82b061777bc60d" }
# The parse → canonicalize → type-check pipeline for the static grant↔effect
# wall (the agent's code is checked before it runs).
lex-syntax = { git = "https://github.com/alpibrusl/lex-lang", rev = "ddfd7b78c725681208a865489e82b061777bc60d" }
lex-ast = { git = "https://github.com/alpibrusl/lex-lang", rev = "ddfd7b78c725681208a865489e82b061777bc60d" }
# acli (Agent-friendly CLI) standard — the binary speaks it so an agent can
# discover lex-os the same way it discovers any other tool.
acli = { git = "https://github.com/alpibrusl/acli", tag = "v0.5.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
hex = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# Ed25519 over canonical capability-contract bytes (capability-addressed
# distribution, lex-os#34). `rand_core` (0.6, the version ed25519-dalek 2.x
# speaks) supplies the OS CSPRNG for keypair generation.
ed25519-dalek = "2"
rand_core = "0.6"
