[package]
name = "lex-os-manifest"
description = "Trust manifest, grant, budgets and reversibility classification for the lex-os autonomous-agent runtime."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lex-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
