[package]
name = "lex-os-perimeter"
description = "The box's edge: sandbox policy derived from a trust grant, with pluggable isolation backends."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
firecracker = []

[dependencies]
lex-os-manifest.workspace = true
lex-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
