[package]
name = "lex-os-supervisor"
description = "The supervisor: mediated command loop, hard budgets, liveness, and reprovision-on-death for lex-os."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
lex-os-proto = { path = "../lex-os-proto" }
lex-os-manifest.workspace = true
lex-os-perimeter.workspace = true
lex-os-resolver.workspace = true
lex-os-audit.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
# Test doubles implement `lex_os_proto::transport::Transport`, whose methods
# return `anyhow::Result`.
anyhow.workspace = true
