[package]
name = "lex-os"
description = "Autonomous-agent runtime: a sealed, disposable box plus a goal, supervised by something the agent cannot reach."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "lex-os"

[[bin]]
name = "lex-os"
path = "src/main.rs"

[features]
# The real Firecracker microVM perimeter is the DEFAULT: on a KVM host `run`
# uses a real, jailed box, and the simulated perimeter is an explicit
# `--simulated` opt-in. Build `--no-default-features` for a portable, simulator-
# only binary (macOS / no-KVM dev), where `run` requires `--simulated`.
default = ["firecracker"]
firecracker = ["lex-os-perimeter/firecracker"]

[dependencies]
lex-os-manifest.workspace = true
lex-os-perimeter.workspace = true
lex-os-resolver.workspace = true
lex-os-supervisor.workspace = true
lex-os-audit.workspace = true
lex-os-check.workspace = true
lex-os-proto.workspace = true
acli.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
ureq = { version = "2", features = ["json"] }
