[package]
name = "lex-os"
description = "Autonomous-agent runtime: a sealed, disposable box plus a goal, supervised by something the agent cannot reach."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "lex-os"

[[bin]]
name = "lex-os"
path = "src/main.rs"

[features]
# The real Firecracker microVM perimeter is the DEFAULT: on a KVM host `run`
# uses a real, jailed box, and the simulated perimeter is an explicit
# `--simulated` opt-in. Build `--no-default-features` for a portable, simulator-
# only binary (macOS / no-KVM dev), where `run` requires `--simulated`.
default = ["firecracker"]
firecracker = ["lex-os-perimeter/firecracker"]

[dependencies]
lex-os-manifest.workspace = true
lex-os-perimeter.workspace = true
lex-os-resolver.workspace = true
lex-os-capsule.workspace = true
lex-os-supervisor.workspace = true
lex-os-audit.workspace = true
lex-os-check.workspace = true
lex-os-proto.workspace = true
lex-bytecode.workspace = true
lex-syntax.workspace = true
lex-ast.workspace = true
lex-types.workspace = true
acli.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
# Read the package's entrypoint out of a `lex pkg` archive (gzipped tar) so
# `capsule install --run` runs the artifact's real code, not a stand-in.
flate2 = "1"
# Build the record stub `proc.spawn` returns ({stdout, stderr, exit_code}) for
# in-box execution; matched to lex-bytecode's IndexMap so `Value::record_dynamic`
# accepts it.
indexmap = "2"
# Build the empty `Value::ArrowTable` stub `arrow.read_csv`/`read_parquet`
# return in-box. Pinned to lex-bytecode's arrow version so the RecordBatch type
# unifies (already in the build tree via lex-bytecode).
arrow-array = "58"
arrow-schema = "58"
tar = "0.4"
ureq = { version = "2", features = ["json"] }
